manifests/ingress/istio.yaml

---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: istio-system
  annotations:
    cert-manager.io/cluster-issuer: local-ca-issuer
spec:
  gatewayClassName: istio
  listeners:
  - name: https
    hostname: "community.tao.internal"
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: local-gw
